[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/sprites/locked_icon1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/level_button1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/icon_sound_off1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/icon_timer_on1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/icon_timer_off1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/icon_windowed1.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Level_select_background1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/icon_full_screen1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/icon_sound_on1.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Titlescreen.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/white.png" type="Texture" id=11]
[ext_resource path="res://src/UIManager.gd" type="Script" id=12]
[ext_resource path="res://src/HUD.gd" type="Script" id=13]
[ext_resource path="res://src/Settings.gd" type="Script" id=14]
[ext_resource path="res://src/LevelSelectScreen.gd" type="Script" id=15]
[ext_resource path="res://src/Transition.gd" type="Script" id=16]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=17]



















[sub_resource type="Theme" id=1]
default_font = ExtResource( 17 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 17 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 17 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 17 )

[node name="Control" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titlescreen" type="Sprite" parent="Title"]
position = Vector2( 512, 304 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="Play" type="Button" parent="Title"]
margin_left = 312.0
margin_top = 96.0
margin_right = 712.0
margin_bottom = 200.0
focus_mode = 0
custom_fonts/font = ExtResource( 17 )
button_mask = 7
enabled_focus_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Title"]
margin_left = 8.0
margin_top = 8.0
margin_right = 528.0
margin_bottom = 168.0
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "A game by:
Kat9_123 [Programming]
and
dekaaspro [Art]"
text = "A game by:
Kat9_123 [Programming]
and
dekaaspro [Art]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="Title"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Control" parent="Title/Settings"]
margin_left = 40.0
margin_top = 568.0
margin_right = 80.0
margin_bottom = 608.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenButton" type="Button" parent="Title/Settings/Fullscreen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="On" type="Sprite" parent="Title/Settings/Fullscreen"]
visible = false
texture = ExtResource( 8 )

[node name="Off" type="Sprite" parent="Title/Settings/Fullscreen"]
texture = ExtResource( 6 )

[node name="Sound" type="Control" parent="Title/Settings"]
margin_left = 112.0
margin_top = 568.0
margin_right = 152.0
margin_bottom = 608.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="Button" parent="Title/Settings/Sound"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="On" type="Sprite" parent="Title/Settings/Sound"]
texture = ExtResource( 9 )

[node name="Off" type="Sprite" parent="Title/Settings/Sound"]
visible = false
texture = ExtResource( 3 )

[node name="Timer" type="Control" parent="Title/Settings"]
margin_left = 184.0
margin_top = 568.0
margin_right = 224.0
margin_bottom = 608.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerButton" type="Button" parent="Title/Settings/Timer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="On" type="Sprite" parent="Title/Settings/Timer"]
visible = false
texture = ExtResource( 4 )

[node name="Off" type="Sprite" parent="Title/Settings/Timer"]
texture = ExtResource( 5 )

[node name="LevelSelectScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="LevelSelectScreen"]
modulate = Color( 0.576471, 0.576471, 0.576471, 1 )
position = Vector2( 512, 304 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Buttons" type="Control" parent="LevelSelectScreen"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 128, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/1"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/1"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 320, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/2"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/2"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]2"
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 512, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/3"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/3"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3"
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 704, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/4"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/4"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3"
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 896, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/5"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/5"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/5"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3"
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Sprite" parent="LevelSelectScreen/Buttons"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 512, 320 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/6"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/6"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/6"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3"
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Sprite" parent="LevelSelectScreen/Buttons"]
visible = false
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 1648, 456 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelectScreen/Buttons/7"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelSelectScreen/Buttons/7"]
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="LevelSelectScreen/Buttons/7"]
visible = false
modulate = Color( 0.709804, 0.694118, 0.709804, 1 )
margin_left = -13.918
margin_top = -8.0
margin_right = 18.082
margin_bottom = 24.0
mouse_filter = 2
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]3"
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="RichTextLabel" parent="HUD"]
visible = false
margin_left = 776.0
margin_top = 16.0
margin_right = 1016.0
margin_bottom = 56.0
theme = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]test"
text = "test"

[node name="Transition" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Transition"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 512, 304 )
scale = Vector2( 16, 9.5 )
texture = ExtResource( 11 )

[node name="Tween" type="Tween" parent="Transition"]

[node name="Timer" type="Timer" parent="Transition"]
wait_time = 0.35
one_shot = true
[connection signal="button_up" from="Title/Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Title/Settings/Fullscreen/FullscreenButton" to="Title/Settings" method="_on_FullscreenButton_button_up"]
[connection signal="button_up" from="Title/Settings/Sound/SoundButton" to="Title/Settings" method="_on_SoundButton_button_up"]
[connection signal="button_up" from="Title/Settings/Timer/TimerButton" to="Title/Settings" method="_on_TimerButton_button_up"]
[connection signal="button_up" from="LevelSelectScreen/Buttons/1/Button" to="LevelSelectScreen" method="_on_button" binds= [ 1 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/2/Button" to="LevelSelectScreen" method="_on_button" binds= [ 2 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/3/Button" to="LevelSelectScreen" method="_on_button" binds= [ 3 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/4/Button" to="LevelSelectScreen" method="_on_button" binds= [ 4 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/5/Button" to="LevelSelectScreen" method="_on_button" binds= [ 5 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/6/Button" to="LevelSelectScreen" method="_on_button" binds= [ 2 ]]
[connection signal="button_up" from="LevelSelectScreen/Buttons/7/Button" to="LevelSelectScreen" method="_on_button" binds= [ 2 ]]
[connection signal="timeout" from="Transition/Timer" to="Transition" method="_on_Timer_timeout"]
